@@ -30,9 +30,9 @@ desktopdir = $(datadir)/applications
 desktop_DATA = $(desktop_in_files:.desktop.in.in=.desktop)
 
 schemadir = $(GCONF_SCHEMA_FILE_DIR)
-font_schema_files = epiphany-fonts.schemas
+extra_schema_files = epiphany-fonts.schemas epiphany-pango.schemas
 schema_in_files = epiphany.schemas.in epiphany-lockdown.schemas.in
-schema_DATA = $(schema_in_files:.schemas.in=.schemas) $(font_schema_files)
+schema_DATA = $(schema_in_files:.schemas.in=.schemas) $(extra_schema_files)
 
 aboutdir = $(pkgdatadir)
 about_DATA = epiphany.xhtml
@@ -73,7 +73,7 @@ endif
 EXTRA_DIST = \
 	$(service_in_files)		\
 	$(schema_in_files)		\
-	$(font_schema_files)		\
+	$(extra_schema_files)		\
 	$(desktop_in_files)		\
 	$(about_DATA)			\
 	$(mimepermission_DATA)		\
