@@ -1,0 +1,46 @@
+<?xml version="1.0"?>
+<gconfschemafile>
+  <schemalist>
+    <schema>
+      <key>/schemas/apps/epiphany/web/enable_pango</key>
+      <applyto>/apps/epiphany/web/enable_pango</applyto>
+      <owner>epiphany</owner>
+      <type>bool</type>
+      <default>false</default>
+      <locale name="C">
+        <short>Whether to enable the gecko pango renderer</short>
+        <long>Whether to enabled the gecko pango renderer.</long>
+      </locale>
+      <locale name="bn">
+        <default>true</default>
+      </locale>
+      <locale name="gu">
+        <default>true</default>
+      </locale>
+      <locale name="hi">
+        <default>true</default>
+      </locale>
+      <locale name="kn">
+        <default>true</default>
+      </locale>
+      <locale name="ml">
+        <default>true</default>
+      </locale>
+      <locale name="mr">
+        <default>true</default>
+      </locale>
+      <locale name="ne">
+        <default>true</default>
+      </locale>
+      <locale name="pa">
+        <default>true</default>
+      </locale>
+      <locale name="ta">
+        <default>true</default>
+      </locale>
+      <locale name="te">
+        <default>true</default>
+      </locale>
+    </schema>
+  </schemalist>
+</gconfschemafile>
