@@ -1,3 +1,13 @@
+2006-04-09  Christian Persch  <chpe@cvs.gnome.org>
+
+	* data/Makefile.am:
+	A data/epiphany-pango.schemas:
+	* lib/ephy-prefs.h:
+	* src/ephy-main.c: (main):
+
+	Enable pango for some indic languages, which depend on it for correct
+	rendering. Bug #335799.
+
 2006-04-03  Jean-François Rameau  <jframeau@cvs.gnome.org>
 
 	* src/ephy-net-monitor.c:
